--- a/style.css
+++ b/style.css
@@ -219,6 +219,16 @@ header nav ul li a {
     color: #fff;
     text-transform: uppercase;
 }
+header .login-but{
+    font-family: 'Montserrat', sans-serif;
+    color: #fff;
+    text-transform: uppercase;
+    display: block;
+    font-size: 16px;
+    text-align: right;
+    margin: 0 auto;
+    padding: 0px 40px;
+}
 
 @media only screen and (min-width: 1000px){
     header .header-brand {
@@ -237,7 +247,11 @@ header nav ul li a {
     header nav ul li a {
         line-height: 60px;
     }
+    header .login-but {
+        padding: 20px 40px 0 40px;
+        line-height: 60px;
 
+    }
 
 }
 
@@ -287,6 +301,7 @@ header nav ul li a {
     width: calc(100% - 32px);
     height: 100px;
     background-color: hsla(120, 62%, 19%, 0.753);
+    transition: 0.25s;
 }
 
 .index-links div h3 {
@@ -297,6 +312,9 @@ header nav ul li a {
     text-align: center;
     text-transform: uppercase;
     line-height: 100px;
+}
+.index-links div:hover{
+    background: rgb(37, 99, 95)
 }
 
 @media only screen and (min-width: 1000px){
@@ -330,7 +348,7 @@ header nav ul li a {
    }
    .index-links div h3 {
     line-height: 220px;
-}
+    }
 }
 /*FOOTER*/
 
